--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         I have gone through personal and professional transformation. I have worked on various projects that 
         challenged and refined my abilities ultimately enhancing my proficiency in coding languages and software 
         development methodologies. <b>Microsoft</b> as a client, I got to work and manage their
-        <a href="" style="text-decoration: none; color: darkblue;"> <b>Surface Laptop</b> </a>sites. Not only did I 
+        <a href="https://www.microsoft.com/en-us/surface" style="text-decoration: none; color: darkblue;"> <b>Surface Laptop</b> </a>sites. Not only did I 
         learn how the IT firms work in India, my time at HCL helped me in cultivating invaluable soft skills such as 
         effective communication, teamwork, time management, and adaptability. Furthermore, the dynamic environment at 
         HCL provided ample opportunities for personal development, fostering a mindset of continuous learning and self-improvement. </h3>
